# transformers_readapt

./: README.md  pyproject.toml
test/: test_readapt.py
transformers_readapt/: __init__.py  readapt.py
